<resources>
    <string name="app_name">BaiduMusic</string>

    <!--主界面TabLayout标题-->
    <string name="tab_title_own">我的</string>
    <string name="tab_title_music">乐库</string>
    <string name="tab_title_k">K歌</string>
    <string name="tab_title_alive">直播</string>

    <!--我的界面-ListView-行布局名称-->
    <string name="own_lv_local_music">本地音乐</string>
    <string name="own_lv_recently_play">最近播放</string>
    <string name="own_lv_download_manage">下载管理</string>
    <string name="own_lv_my_k">我的K歌</string>
    <string name="own_lv_my_like">我最喜欢的单曲</string>
    <string name="own_lv_new_create">新建歌单</string>
    <string name="own_lv_login">立即登录, 让音乐跟着你走</string>
    <string name="own_lv_song_number">100首</string>

    <!--主界面-乐库Fragment-TabLayout标签-->
    <string name="music_tab_recommend">推荐</string>
    <string name="music_tab_ranking">排行</string>
    <string name="music_tab_song">歌单</string>
    <string name="music_tab_radio">电台</string>
    <string name="music_tab_mv">MV</string>

    <!--我的Fragment-本地音乐二级页面TabLayout标题-->
    <string name="local_tab_song">歌曲</string>
    <string name="local_tab_file">文件夹</string>
    <string name="local_tab_songer">歌手</string>
    <string name="local_tab_album">专辑</string>

    <!--直播 上部Rv 二级界面 TabLayout标题-->
    <string name="alive_top_rv_tab_title_all">全部</string>
    <string name="alive_top_rv_tab_title_woman">女神</string>
    <string name="alive_top_rv_tab_title_goodVoice">好声音</string>
    <string name="alive_top_rv_tab_title_new">新秀</string>
    <string name="alive_top_rv_tab_title_boom">劲爆</string>
    <string name="alive_top_rv_tab_title_joy">搞笑</string>
    <string name="alive_top_rv_tab_title_sister">萌妹</string>
    <string name="alive_top_rv_tab_title_recommend">推荐</string>

    <!--////////////////////////////////////////////////-->

    <!--min List popWindow-->
    <string name="min_list_is_playing_list">正在播放列表</string>
    <string name="min_list_clear_all">全部清空</string>

    <!--我的界面-->
    <string name="own_create_self">自建歌单</string>
    <string name="own_songlist">收藏歌单</string>
    <!--我的界面 随便听听-->
    <string name="own_listen">随便听听</string>

    <!--乐库 歌单 popwindow-->
    <string name="pw_selete_kinds">选择分类</string>
    <string name="pw_all">全部</string>

    <!--乐库 MV 标题-->
    <string name="music_mv_all_song">全部歌单</string>

    <!--乐库 MV 最新最热-->
    <string name="music_mv_hot">最热</string>
    <string name="music_mv_new">最新</string>

    <!--乐库 电台-->
    <string name="music_radio_recommend">推荐电台</string>
    <string name="music_radio_more_kinds">更多电台分类</string>

    <!--乐库 推荐-->
    <string name="music_recommend_songList">歌单推荐</string>
    <string name="music_recommend_new_disk">新碟上架</string>
    <string name="music_recommend_hot_sold">热销专辑</string>
    <string name="music_recommend_scence_radio">场景电台</string>
    <string name="music_recommend_today_song">今日推荐歌曲</string>
    <string name="music_recommend_mine_do">原创音乐</string>
    <string name="music_recommend_mv_hot">最热MV推荐</string>
    <string name="music_recommend_happy_play">乐播节目</string>
    <string name="music_recommend_mine_cloumn">专栏</string>
    <!--标题-->
    <string name="more">更多</string>
    <!--K歌搜索框提示-->
    <string name="k_search_hint">搜索K歌伴奏</string>
    <!--K歌-->
    <string name="k_hot_song">KTV热歌榜</string>
    <string name="k_china_song">华语金曲</string>
    <string name="k_classifty">欧美经典</string>
    <string name="k_man">男歌手</string>
    <string name="k_woman">女歌手</string>
    <string name="K_team">乐队组合</string>
    <string name="k_all_song">大家都在唱</string>

    <!--推荐-->
    <string name="recommend_songer">歌手</string>
    <string name="recommend_songer_hot">热门歌手</string>
    <string name="recommend_kinds">歌曲分类</string>
    <string name="recommend_today">今日推荐歌曲</string>

    <!--直播-->
    <string name="hot_live">热门直播</string>

    <!--我的界面 本地音乐二级页面-->
    <string name="own_local_two">本地音乐</string>
    <string name="local_random_play_music">随机播放全部</string>
    <string name="local_batch_manage">批量管理</string>

    <!--退出程序-->
    <string name="exit_app">再按一次退出程序</string>
    <!--播放界面的播放模式图标-->
    <string-array name="play_page_mode">
        <item>@mipmap/bt_playpage_random_normal</item>
        <item>@mipmap/bt_playpage_order_normal</item>
        <item>@mipmap/bt_playpage_roundsingle_normal</item>
        <item>@mipmap/bt_playpage_loop_normal</item>
    </string-array>

    <string-array name="play_list_mode">
        <item>@mipmap/bt_list_random_normal</item>
        <item>@mipmap/bt_list_order_normal</item>
        <item>@mipmap/bt_list_roundsingle_normal</item>
        <item>@mipmap/bt_list_button_roundplay_normal</item>
    </string-array>

    <string name="random_mode">随机播放</string>
    <string name="order_mode">顺序播放</string>
    <string name="roundsingle_mode">单曲循环</string>
    <string name="loop_mode">循环播放</string>

    <!--登录界面-->
    <string name="login">立即登录</string>
    <string name="login_hint">登录后, 自动为您同步歌曲</string>
    <string name="login_wifi">仅WiFi联网</string>
    <string name="login_setipauto">定时开关</string>
    <string name="login_desktop">桌面歌词</string>
    <string name="login_lockscr">锁屏</string>
    <string name="login_skin">换肤</string>
    <string name="login_sound">音效</string>
    <string name="login_scan_lyric">扫描歌词</string>
    <string name="login_import">电脑导歌</string>
    <string name="login_vip">成为白金VIP</string>
    <string name="login_ktv">雷石点歌机</string>
    <string name="login_setting">设置</string>
    <string name="login_activity">活动专区</string>
    <string name="login_app">精品应用</string>

    <!--PopWindow更多-->
    <string name="play_next">下一首播放</string>
    <string name="like_txt">喜欢</string>
    <string name="download_txt">下载</string>
    <string name="share_txt">分享</string>
    <string name="add_txt">添加到</string>
    <string name="mv_txt">MV</string>

    <string name="search_hint">歌曲, 歌手, 专辑, 歌词, 伴奏</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="total">共</string>
    <string name="song">首歌</string>
    <string name="piece">首</string>
    <string name="music">首歌曲</string>
    <string name="songlist_num">个歌单</string>
    <string name="baidumusic">百度音乐, 听到极致</string>

</resources>
