<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/pop_detail_space"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:alpha="0.3"
        android:background="@color/colarBgNotif" />

    <TextView
        android:id="@+id/pop_detail_more_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/music_song_pw"
        android:gravity="center_horizontal"
        android:padding="@dimen/common_margin"
        android:textSize="@dimen/title_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBgWhite"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBgWhite"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="@dimen/margin_zero"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/pop_detail_next_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/common_margin"
                    android:src="@mipmap/ic_listmore_nextplay_normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/play_next" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/margin_zero"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/pop_detail_like_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/common_margin"
                    android:src="@mipmap/ic_listmore_love_normal" />

                <TextView
                    android:id="@+id/pop_detail_download_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/like_txt" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/margin_zero"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/pop_detail_download_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/common_margin"
                    android:src="@mipmap/ic_listmore_download_normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/download_txt" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/margin_zero"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/pop_detail_share_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/common_margin"
                    android:src="@mipmap/ic_listmore_share_normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/share_txt" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBgWhite"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="@dimen/margin_zero"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/pop_detail_add_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/common_margin"
                    android:src="@mipmap/ic_listmore_add_normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="50dp"
                    android:text="@string/add_txt" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/margin_zero"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/common_margin"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/pop_detail_mv_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/common_margin"
                    android:visibility="gone"
                    android:src="@mipmap/ic_listmore_mv_normal" />

                <TextView
                    android:id="@+id/pop_detail_mv_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="50dp"
                    android:text="@string/mv_txt" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="@dimen/margin_zero"
                android:layout_height="wrap_content"
                android:layout_weight="2"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>